[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu_UI/Username/Username.gd" type="Script" id=1]

[node name="Username" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 100 )
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 97.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 286.0
margin_bottom = 14.0
mouse_filter = 1
text = "CHOOSE_USERNAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="Panel/VBoxContainer"]
visible = false
margin_top = 26.0
margin_right = 300.0
margin_bottom = 40.0
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 286.0
margin_bottom = 42.0
alignment = 1

[node name="Username" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 205.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
align = 1
max_length = 64

[node name="Confirm" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 230.0
margin_bottom = 24.0
text = "#"

[node name="Random" type="Button" parent="Panel/VBoxContainer"]
margin_top = 46.0
margin_right = 286.0
margin_bottom = 66.0
text = "RANDOM"

[node name="Close" type="Button" parent="Panel/VBoxContainer"]
margin_top = 70.0
margin_right = 286.0
margin_bottom = 90.0
grow_horizontal = 0
text = "ABORT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Panel/VBoxContainer/HBoxContainer/Username" to="." method="_on_Username_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Random" to="." method="_on_Random_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Close" to="." method="_on_Close_pressed"]
